--- a/html/views/projectManagement.html
+++ b/html/views/projectManagement.html
@@ -1,3 +1,132 @@
-<div>
-  施工项目管理
+<div class="user-form">
+  <div class="form-title">
+    <div class="blue-block"></div>
+    <div class="title">
+      工程管理
+    </div>
+  </div>
+  <div class="form-body">
+    <table>
+      <tbody>
+      <tr>
+        <td>
+          <div class="input-container">
+            <div class="input-label">
+              工程编号:
+            </div>
+            <div class="input-content">
+              <input placeholder="" type="text"/>
+            </div>
+          </div>
+        </td>
+        <td>
+          <div class="input-container">
+            <div class="input-label">
+              工程名称:
+            </div>
+            <div class="input-content">
+              <input placeholder="" type="text"/>
+            </div>
+          </div>
+        </td>
+        <td>
+          <div class="input-container">
+            <div class="input-label">
+              发包商编号:
+            </div>
+            <div class="input-content">
+              <input placeholder="" type="text"/>
+            </div>
+          </div>
+        </td>
+        <td>
+          <div class="input-container">
+            <div class="input-label">
+              发包商名称:
+            </div>
+            <div class="input-content">
+              <input placeholder="" type="text"/>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <div class="input-container">
+            <div class="input-label" style="width: 14%">
+              工程位置:
+            </div>
+            <div class="input-content" style="width: 86%; left: 14%">
+              <input placeholder="" type="text"/>
+            </div>
+          </div>
+        </td>
+
+        <td>
+        </td>
+
+        <td>
+          <button>查询</button>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
+<div class="user-table">
+  <div class="table-title">
+    <div class="blue-block"></div>
+    <div class="title">工程管理</div>
+  </div>
+  <div class="table-body">
+    <div class="table-data">
+      <table border="1">
+        <thead class="table-head">
+        <tr>
+          <th>工程编号</th>
+          <th>工程名称</th>
+          <th>发包商名称</th>
+          <th style="width: 60%;">工程位置</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>表格数据1</td>
+          <td>表格数据2</td>
+          <td>表格数据3</td>
+          <td>表格数据4</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="table-footer">
+      <button class="pagnition-next">下一页</button>
+      <button class="pagnition-prev">上一页</button>
+      <div class="page-num">
+        256
+      </div>
+      <div class="page-num">
+        ...
+      </div>
+      <div class="page-num">
+        3
+      </div>
+      <div class="page-num">
+        2
+      </div>
+      <div class="page-num">
+        1
+      </div>
+      <div class="current-page">
+        当前第<span style="padding: 0 0.3em;">1</span>页
+      </div>
+    </div>
+  </div>
+</div>
+<script>
+  (function() {
+    $('.table-head').width($('.table-data').find('table').width() + 2);
+    $('.table-body').height($('.page-content').height() - $('.user-form').height() - $('.table-title').height() - 36);
+    $('.table-data').height($('.table-body').height() - $('.table-title').height() - $('.table-footer').height());
+  })();
+</script>
