--- a/css/index.css
+++ b/css/index.css
@@ -55,3 +55,22 @@
 #register-panel, #login-panel {
   width: 100%;
 }
+
+.common-input {
+  position: relative;
+}
+
+.tips {
+  font-size: 0.4em;
+  left: 30%;
+  width: 70%;
+  padding-left: 1.25em;
+  position: absolute;
+  bottom: -1.5em;
+}
+.error-tips {
+  color: #EE0000;
+}
+.success-tips {
+  color: #1fc711;
+}
