--- a/html/views/equipmentManagement.html
+++ b/html/views/equipmentManagement.html
@@ -35,7 +35,7 @@
               设备类型:
             </div>
             <div class="input-content">
-              <input placeholder="" type="text"/>
+              <select></select>
             </div>
           </div>
         </td>
