# Conflicts: #	.idea/workspace.xml

--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,7 @@
 .panel {
   position: absolute;
   left: 37.5%;
-  bottom: 45%;
+  bottom: 40%;
   padding: 2em;
   width: 25%;
   background-color: #FFFFFF;
@@ -54,4 +54,23 @@
 
 #register-panel, #login-panel {
   width: 100%;
+}
+
+.common-input {
+  position: relative;
+}
+
+.tips {
+  font-size: 0.4em;
+  left: 30%;
+  width: 70%;
+  padding-left: 1.25em;
+  position: absolute;
+  bottom: -1.5em;
+}
+.error-tips {
+  color: #EE0000;
+}
+.success-tips {
+  color: #1fc711;
 }
