--- a/html/views/userManagement.html
+++ b/html/views/userManagement.html
@@ -2,7 +2,7 @@
   <div class="form-title">
     <div class="blue-block"></div>
     <div class="title">
-      运行设备管理
+      用户管理
     </div>
   </div>
   <div class="form-body">
@@ -15,7 +15,7 @@
               用户姓名:
             </div>
             <div class="input-content">
-              <input placeholder="" type="text"/>
+              <input  placeholder="" type="text"/>
             </div>
           </div>
         </td>
@@ -122,8 +122,6 @@
 </div>
 <script>
   (function() {
-    $('.table-head').width($('.table-data').find('table').width() + 2);
-    $('.table-body').height($('.page-content').height() - $('.user-form').height() - $('.table-title').height() - 36);
-    $('.table-data').height($('.table-body').height() - $('.table-title').height() - $('.table-footer').height());
+
   })();
 </script>
