--- a/html/views/equipmentManagement.html
+++ b/html/views/equipmentManagement.html
@@ -171,8 +171,11 @@
         if (value)
           dataObj[param] = value;
       });
-
+      // TODO 前台查询方法
     });
 
+    confirmEvent = function() {
+      alert('老婆我爱你');
+    }
   })();
 </script>
