--- a/html/views/projectManagement.html
+++ b/html/views/projectManagement.html
@@ -15,7 +15,7 @@
               工程编号:
             </div>
             <div class="input-content">
-              <input placeholder="" type="text"/>
+              <input bind-to="engineeringId" placeholder="" type="text"/>
             </div>
           </div>
         </td>
@@ -25,32 +25,10 @@
               工程名称:
             </div>
             <div class="input-content">
-              <input placeholder="" type="text"/>
+              <input bind-to="engineeringName" placeholder="" type="text"/>
             </div>
           </div>
         </td>
-        <td>
-          <div class="input-container">
-            <div class="input-label">
-              发包商编号:
-            </div>
-            <div class="input-content">
-              <input placeholder="" type="text"/>
-            </div>
-          </div>
-        </td>
-        <td>
-          <div class="input-container">
-            <div class="input-label">
-              发包商名称:
-            </div>
-            <div class="input-content">
-              <input placeholder="" type="text"/>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <tr>
         <td colspan="2">
           <div class="input-container">
             <div class="input-label">
@@ -61,9 +39,25 @@
             </div>
           </div>
         </td>
+        <td>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="input-container">
+            <div class="input-label">
+              发包商名称:
+            </div>
+            <div class="input-content">
+              <input bind-to="engineeringLocation" placeholder="" type="text"/>
+            </div>
+          </div>
+        </td>
 
         <td>
         </td>
+        <td>
+       </td>
 
         <td>
           <button class="insert c-green">新增</button>
@@ -84,10 +78,9 @@
       <table border="1">
         <thead class="table-head">
         <tr>
-          <th>工程编号</th>
-          <th>工程名称</th>
-          <th>发包商名称</th>
-          <th style="width: 60%;">工程位置</th>
+          <th bind-to="engineeringId">工程编号</th>
+          <th bind-to="engineeringName">工程名称</th>
+          <th bind-to="engineeringLocation" style="width: 60%;">工程位置</th>
         </tr>
         </thead>
         <tbody>
