--- a/html/views/userManagement.html
+++ b/html/views/userManagement.html
@@ -91,7 +91,10 @@
           <td>表格数据2</td>
           <td>表格数据3</td>
           <td>表格数据4</td>
-          <td>删除\修改</td>
+          <td>
+            <button class="update c-green">修改</button>
+            <button class="delete c-delete">删除</button>
+          </td>
         </tr>
         </tbody>
       </table>
