--- a/html/views/userManagement.html
+++ b/html/views/userManagement.html
@@ -125,6 +125,9 @@
 </div>
 <script>
   (function() {
+    insertEvent = function() {
+
+    };
     cancelEvent = function() {
 
     };
@@ -137,9 +140,8 @@
     queryEvent = function() {
 
     };
-
     confirmEvent = function() {
-
+      console.log(ACTION);
     };
   })();
 </script>
